--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "state-transition-buffer",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "Does state change too quickly? With stage-transition-buffer, the minimum duration of any state can be assured. ",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "module": "dist/src/index.js",
+  "typings": "dist/src/index.d.ts",
+  "files": ["dist/src"],
   "scripts": {
     "build": "tsc",
     "lint": "tslint -c tslint.json *.ts",
